Test Org - Speridian/src/objects/BA_Subgroup__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <label>Renewal Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_FaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subgroup</relationshipLabel>
        <relationshipName>Subgroup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_InitialSource__c</fullName>
        <label>Initial Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Agency-Referral</fullName>
                </value>
                <value>
                    <fullName>Broker Portal</fullName>
                </value>
                <value>
                    <fullName>Retail Channel</fullName>
                </value>
                <value>
                    <fullName>HIX</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Phone__c</fullName>
        <label>Phone</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RatingCity__c</fullName>
        <label>Rating City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_RatingCounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rating County</label>
        <referenceTo>BA_Zipcode_Admin__c</referenceTo>
        <relationshipLabel>Subgroup</relationshipLabel>
        <relationshipName>Subgroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_RatingZipcode__c</fullName>
        <label>Rating Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_SICDesc__c</fullName>
        <label>SIC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ba_SIC__c</fullName>
        <label>SIC Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_SubgroupNumber__c</fullName>
        <label>Subgroup Number</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_SubgroupStatus__c</fullName>
        <label>Subgroup Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Partially U/W</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Former Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_SubgroupType__c</fullName>
        <label>Subgroup Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STD - Standard</fullName>
                </value>
                <value>
                    <fullName>COBRA Bill-to-Group</fullName>
                </value>
                <value>
                    <fullName>COBRA Direct Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_TiNEiN__c</fullName>
        <label>TIN/EIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <label>Subgroup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subgroup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subgroup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>